syntax = "proto3";

package myservice;

option go_package = "./pb"; // Go 包路径

service MsgService {
  rpc SendMessage (ImMsgRequest) returns (ImMsgResponse);
}

//	Ts int64 `json:"ts"`
message ImMsgRequest {
  string msgId = 1;
  //0=单聊；1=一般群； 2=机器人
  int32 chatType = 2;
  //消息类型； 1=文本；2=图片；3=视频；4=文件；5=通话
  int32 msgType = 3;
  //发送者id
  int64 fromId = 4;
  //接收者id
  int64 toId = 5;
  //消息内容
  string message = 6;
  //消息客户端时间戳
  int64 ts = 7;
}

message ImMsgResponseData {
  string msgId = 1;
  int64  sequence = 2;
  int64  conversationId=3;
}

message ImMsgResponse {
  string type = 1;
  int32 code = 2;
  string msg = 3;
  ImMsgResponseData data = 4;
}
